--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.4.1",
+    "intl": "^1.2.5",
+    "knex": "0.21.1",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.1.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
