--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.4.1",
     "intl": "^1.2.5",
-    "knex": "0.21.1",
-    "mysql": "^2.18.1",
-    "mysql2": "^2.1.0",
+    "knex": "^0.21.1",
+    "mysql": "mysqljs/mysql",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
