--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
+    "react-https-redirect": "^1.1.0",
     "react-input-mask": "^2.0.4",
-    "react-router-dom": "^5.1.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-to-print": "^2.8.0-beta.1",
     "socket.io-client": "^2.3.0"
