--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-to-print": "^2.8.0-beta.1",
+    "react-toast-notifications": "^2.4.0",
     "socket.io-client": "^2.3.0"
   },
   "scripts": {
